refactor(portfolio): 重構 Berify 技術亮點區塊與組件拆分
- 新增 [RewardsRefactorFeature] 作為整合該區塊的主要容器組件
- 抽離 [ShowcaseBlock] 獨立封裝成果展示與 LightBox 互動邏輯
- 新增 `DecisionsBlock` 與 `CodeBlockTabs` 優化工程決策與程式碼切換的呈現
- 移除舊版 `DecisionBlock` 並同步更新 `berify.json` 等語系檔
- 調整 `TechnicalSpotlight` 與 `BlockRenderer` 以支援新的組件架構

--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -10,6 +10,8 @@
   "teamSize": "Team Size",
   "projectType": "Project Type",
   "platforms": "Platforms",
-  "techStack": "Tech Stack"
+  "techStack": "Tech Stack",
+  "selectedDecision": "Selected Strategy",
+  "notSelectedDecision": "Not Selected"
 }
 
