feat(portfolio): 更新 Berify 專案說明與 LightBox 樣式優化
- 更新 Berify 專案多語系文案與詳細說明
- 優化 LightBox 標題樣式與導航按鈕間距
- 調整 ShowcaseGallery 預設顯示數量為 6
- 加入「顯示更多媒體」翻譯支援

--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -12,5 +12,6 @@
   "platforms": "Platforms",
   "techStack": "Tech Stack",
   "selectedDecision": "Selected Strategy",
-  "notSelectedDecision": "Not Selected"
+  "notSelectedDecision": "Not Selected",
+  "showMoreMedia": "Show More Media"
 }
