--- a/public/locales/zh/projects/_common.json
+++ b/public/locales/zh/projects/_common.json
@@ -12,5 +12,6 @@
   "techStack": "技術棧",
   "showcase": "成果展示",
   "selectedDecision": "已選策略",
-  "notSelectedDecision": "未選策略"
+  "notSelectedDecision": "未選策略",
+  "showMoreMedia": "顯示更多媒體"
 }
