--- a/public/locales/zh/projects/berify.json
+++ b/public/locales/zh/projects/berify.json
@@ -294,13 +294,25 @@
       },
       "consumerApp": {
         "home": {
-          "title": "NFC 產品掃描入口",
-          "desc": "核心亮點：App Clip 生命週期重構、Landing 生命週期競態條件排除、高強韌性 NFC 掃描交互 (AbortController)"
+          "title": "首頁",
+          "desc": "核心路由：統一調度 NFC 事件與應用初始化流程"
         },
-        "productDetail": { "title": "區塊鏈驗證資訊與 NFT 資產", "desc": "核心亮點：商務邏輯狀態機、客製化手勢交互" },
-        "chat": { "title": "即時互動", "desc": "WebSocket 品牌聊天室" },
-        "rewardsDetail": { "title": "獎勵詳情", "desc": "點數兌換專屬折扣" },
-        "scanHistory": { "title": "掃描歷程", "desc": "產品互動記錄" }
+        "productDetail": {
+          "title": "產品詳情",
+          "desc": "輪播視圖：透過原生 ScrollView 優化水平滾動機制，實現產品資訊與 NFT 憑證的無縫切換與渲染"
+        },
+        "chat": {
+          "title": "留言板",
+          "desc": "樂觀更新機制：實作前端暫存與失敗保存，達成零延遲的發布體驗，並支援離線重試"
+        },
+        "rewardsDetail": {
+          "title": "獎勵詳情",
+          "desc": "進階滾動交互：封裝 CustomFlatList 實現視差滾動 (Parallax) 與吸頂 (Sticky Header) 的原生級體驗"
+        },
+        "scanHistory": {
+          "title": "掃描紀錄",
+          "desc": "虛擬化列表渲染：實作視窗偵測，智慧控制影片/圖片資源僅在可視區域內加載，大幅降低記憶體佔用"
+        }
       }
     },
     "disclaimer": "本頁面展示的內容為商業專案，相關截圖僅供作品集展示用途。"
