refactor(portfolio): 重構商店區塊為 App 下載卡片樣式
- 更新 StoreSection UI，包含 App Icon、標題、技術堆疊標籤
- 新增 App Store 與 Google Play 按鈕，支援懸浮顯示 QR Code
- 調整 Berify 專案頁面，移除 websiteLink 並優化免責聲明樣式
- 更新 projects/_common.json 翻譯檔，對應新介面用語

--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -1,6 +1,6 @@
 {
   "sourceCode": "Source Code",
-  "storeLink": "Store",
+  "storeTitle": "Live Environment",
   "projectDemo": "Project Demo",
   "keyContributions": "Key Contributions",
   "projectShowcase": "Project Showcase",
