--- a/public/locales/zh/projects/_common.json
+++ b/public/locales/zh/projects/_common.json
@@ -1,6 +1,6 @@
 {
   "sourceCode": "原始碼",
-  "storeLink": "商店",
+  "storeTitle": "正式環境連結",
   "projectDemo": "專案展示",
   "projectShowcase": "專案展示",
   "codeSnippet": "核心程式碼",
