feat(portfolio): 更新 Berify 專案展示與 UI 優化
- 同步並更新 Berify 專案的中英文翻譯內容
- 新增 PhoneMockup 元件以展示 App 畫面
- 重構 StoreSection 為 App 下載卡片樣式
- 優化 CodeBlock UI，支援淺色模式與語法高亮
- 調整 LightBox 樣式以提升閱讀體驗
- 更新 TechnicalSpotlight 系列元件與專案概覽

--- a/public/locales/en/projects/_common.json
+++ b/public/locales/en/projects/_common.json
@@ -2,7 +2,6 @@
   "sourceCode": "Source Code",
   "storeTitle": "Live Environment",
   "projectDemo": "Project Demo",
-  "keyContributions": "Key Contributions",
   "projectShowcase": "Project Showcase",
   "codeSnippet": "Core Code",
   "technicalSpotlight": "Technical Challenges & Solutions",
@@ -11,6 +10,7 @@
   "projectType": "Project Type",
   "platforms": "Platforms",
   "techStack": "Tech Stack",
+  "showcase": "Showcase",
   "selectedDecision": "Selected Strategy",
   "notSelectedDecision": "Not Selected",
   "showMoreMedia": "Show More Media"
