--- a/public/locales/zh/projects/berify.json
+++ b/public/locales/zh/projects/berify.json
@@ -30,14 +30,20 @@
       "title": "核心工程與貢獻",
       "list": [
         {
-          "title": "模組化規模",
-          "metric": "9 個分散式服務單元 / 188+ 領域模型",
-          "desc": ["設計並主導三層式收藏體系，並與電商平台實現數據對接", "整合生物辨識 IDV 安全體系"]
+          "title": "沉浸式交互體驗",
+          "metric": "原生級流暢度",
+          "desc": [
+            "封裝 CustomFlatList 實現視差滾動與吸頂，提供原生級流暢體驗",
+            "實作列表視窗偵測，精準控制可視區域內的資源加載時機"
+          ]
         },
         {
-          "title": "資料演進",
-          "metric": "114+ 次資料庫架構演進歷程",
-          "desc": ["設計扁平化留言模型，避免 N+1 查詢問題", "透過 Prisma Schema 強型別約束，維護高頻遷移一致性"]
+          "title": "高韌性社群架構",
+          "metric": "零延遲操作回饋",
+          "desc": [
+            "導入樂觀更新機制，消除 API 等待時間，大幅提升操作體感",
+            "建構離線重試隊列，確保不穩定網路下的數據最終一致性"
+          ]
         },
         {
           "title": "原生層穩定性",
@@ -307,7 +313,7 @@
         },
         "rewardsDetail": {
           "title": "獎勵詳情",
-          "desc": "進階滾動交互：封裝 CustomFlatList 實現視差滾動 (Parallax) 與吸頂 (Sticky Header) 的原生級體驗"
+          "desc": "進階滾動交互：封裝 CustomFlatList 實現視差滾動與吸頂的原生級體驗"
         },
         "scanHistory": {
           "title": "掃描紀錄",
